--- a/contact.html
+++ b/contact.html
@@ -12,12 +12,14 @@
 
 			<!-- Header -->
 				<header id="header">
-					<img class="imagess logo" src="imgs/Logo%20Molenzicht.png" alt="">
+					<a href="https://www.molenzichtkoedijk.nl">
+						<img class="imagess logo" src="imgs/Logo%20Molenzicht.png" alt="">
+					</a>
 					<nav id="nav">
 						<ul class="langs">
-							<li><a href="index.html" class="lang" key="homeknop">Homepagina</a></li>
-							<li><a href="lodge.html">Lodge</a></li>
-							<li><a href="studio.html">Studio</a></li>
+							<li><a href="https://www.molenzichtkoedijk.nl" class="lang" key="homeknop">Homepagina</a></li>
+							<li><a href="https://www.molenzichtkoedijk.nl/lodge.html">Lodge</a></li>
+							<li><a href="https://www.molenzichtkoedijk.nl/studio.html">Studio</a></li>
 							<li>
 								<a href="#" class="icon solid fa-angle-down lang" key="talenUitschuifKnop">Talen</a>
 								<ul>
