--- a/studio.html
+++ b/studio.html
@@ -13,11 +13,13 @@
 
     <!-- Header -->
     <header id="header">
-        <img class="imagess logo" src="imgs/Logo%20Molenzicht.png" alt="">
+        <a href="https://www.molenzichtkoedijk.nl">
+            <img class="imagess logo" src="imgs/Logo%20Molenzicht.png" alt="">
+        </a>
         <nav id="nav">
             <ul class="langs">
-                <li><a href="index.html" class="lang" key="homeknop">Homepagina</a></li>
-                <li><a href="lodge.html">Lodge</a></li>
+                <li><a href="https://www.molenzichtkoedijk.nl" class="lang" key="homeknop">Homepagina</a></li>
+                <li><a href="https://www.molenzichtkoedijk.nl/lodge.html">Lodge</a></li>
                 <li>
                     <a href="#" class="icon solid fa-angle-down lang" key="talenUitschuifKnop">Talen</a>
                     <ul>
@@ -26,7 +28,7 @@
                         <li><a href="studio.html" id="de" onclick="translater('de')">Duits</a></li>
                     </ul>
                 </li>
-                <li><a class="lang" key="contactknop" href="contact.html">Contact</a></li>
+                <li><a class="lang" key="contactknop" href="https://www.molenzichtkoedijk.nl/contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
