--- a/homepage.html
+++ b/homepage.html
@@ -17,17 +17,17 @@
 					</a>
 					<nav id="nav">
 						<ul class="langs">
-							<li><a href="https://www.molenzichtkoedijk.nl/lodge.html">Lodge</a></li>
-							<li><a href="https://www.molenzichtkoedijk.nl/studio.html">Studio</a></li>
+							<li><a href="https://www.molenzichtkoedijk.nl/lodge">Lodge</a></li>
+							<li><a href="https://www.molenzichtkoedijk.nl/studio">Studio</a></li>
 							<li>
 								<a href="#" class="icon solid fa-angle-down lang" key="talenUitschuifKnop">Talen</a>
 								<ul>
-									<li><a href="index.html" id="nl" onclick="translater('nl')">Nederlands</a></li>
-									<li><a href="index.html" id="en" onclick="translater('en')">English</a></li>
-									<li><a href="index.html" id="de" onclick="translater('de')">Duits</a></li>
+									<li><a href="https://www.molenzichtkoedijk.nl" id="nl" onclick="translater('nl')">Nederlands</a></li>
+									<li><a href="https://www.molenzichtkoedijk.nl" id="en" onclick="translater('en')">English</a></li>
+									<li><a href="https://www.molenzichtkoedijk.nl" id="de" onclick="translater('de')">Duits</a></li>
 								</ul>
 							</li>
-							<li><a class="lang" key="contactknop" href="https://www.molenzichtkoedijk.nl/contact.html">Contact</a></li>
+							<li><a class="lang" key="contactknop" href="https://www.molenzichtkoedijk.nl/contact">Contact</a></li>
 						</ul>
 					</nav>
 				</header>
