--- a/contact.html
+++ b/contact.html
@@ -18,14 +18,14 @@
 					<nav id="nav">
 						<ul class="langs">
 							<li><a href="https://www.molenzichtkoedijk.nl" class="lang" key="homeknop">Homepagina</a></li>
-							<li><a href="https://www.molenzichtkoedijk.nl/lodge.html">Lodge</a></li>
-							<li><a href="https://www.molenzichtkoedijk.nl/studio.html">Studio</a></li>
+							<li><a href="https://www.molenzichtkoedijk.nl/lodge">Lodge</a></li>
+							<li><a href="https://www.molenzichtkoedijk.nl/studio">Studio</a></li>
 							<li>
 								<a href="#" class="icon solid fa-angle-down lang" key="talenUitschuifKnop">Talen</a>
 								<ul>
-									<li><a href="contact.html" id="nl" onclick="translater('nl')">Nederlands</a></li>
-									<li><a href="contact.html" id="en" onclick="translater('en')">English</a></li>
-									<li><a href="contact.html" id="de" onclick="translater('de')">Duits</a></li>
+									<li><a href="https://www.molenzichtkoedijk.nl/contact" id="nl" onclick="translater('nl')">Nederlands</a></li>
+									<li><a href="https://www.molenzichtkoedijk.nl/contact" id="en" onclick="translater('en')">English</a></li>
+									<li><a href="https://www.molenzichtkoedijk.nl/contact" id="de" onclick="translater('de')">Duits</a></li>
 								</ul>
 							</li>
 						</ul>
