--- a/lodge.html
+++ b/lodge.html
@@ -19,16 +19,16 @@
         <nav id="nav">
             <ul class="langs">
                 <li><a href="https://www.molenzichtkoedijk.nl" class="lang" key="homeknop">Homepagina</a></li>
-                <li><a href="https://www.molenzichtkoedijk.nl/studio.html">Studio</a></li>
+                <li><a href="https://www.molenzichtkoedijk.nl/studio">Studio</a></li>
                 <li>
                     <a href="#" class="icon solid fa-angle-down lang" key="talenUitschuifKnop">Talen</a>
                     <ul>
-                        <li><a href="lodge.html" id="nl" onclick="translater('nl')">Nederlands</a></li>
-                        <li><a href="lodge.html" id="en" onclick="translater('en')">English</a></li>
-                        <li><a href="lodge.html" id="de" onclick="translater('de')">Duits</a></li>
+                        <li><a href="https://www.molenzichtkoedijk.nl/lodge" id="nl" onclick="translater('nl')">Nederlands</a></li>
+                        <li><a href="https://www.molenzichtkoedijk.nl/lodge" id="en" onclick="translater('en')">English</a></li>
+                        <li><a href="https://www.molenzichtkoedijk.nl/lodge" id="de" onclick="translater('de')">Duits</a></li>
                     </ul>
                 </li>
-                <li><a class="lang" key="contactknop" href="https://www.molenzichtkoedijk.nl/contact.html">Contact</a></li>
+                <li><a class="lang" key="contactknop" href="https://www.molenzichtkoedijk.nl/contact">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -88,22 +88,6 @@
                         </div>
                         <a class="prev" onclick="plusSlides(-1)">❮</a>
                         <a class="next" onclick="plusSlides(1)">❯</a>
-                    </div>
-                    <div>
-                        <span class="dot"></span>
-                        <span class="dot"></span>
-                        <span class="dot"></span>
-                        <span class="dot"></span>
-                        <span class="dot"></span>
-                        <span class="dot"></span>
-                        <span class="dot"></span>
-                        <span class="dot"></span>
-                        <span class="dot"></span>
-                        <span class="dot"></span>
-                        <span class="dot"></span>
-                        <span class="dot"></span>
-                        <span class="dot"></span>
-                        <span class="dot"></span>
                     </div>
                 </div>
             </div>
