--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="nl">
 	<head>
-		<title>Contactpagina</title>
+		<a href="https://www.molenzichtkoedijk.nl/homepage" title="Contactpagina">Contactpagina</a>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
