--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="nl">
 	<head>
-		<a href="https://www.molenzichtkoedijk.nl/homepage" title="Contactpagina">Contactpagina</a>
+		<title>Contactpagina</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,8 +18,8 @@
 					<nav id="nav">
 						<ul class="langs">
 							<li><a href="https://www.molenzichtkoedijk.nl" class="lang" key="homeknop">Homepagina</a></li>
-							<li><a href="https://www.molenzichtkoedijk.nl/lodge">Lodge</a></li>
-							<li><a href="https://www.molenzichtkoedijk.nl/studio">Studio</a></li>
+							<li><a href="lodge">Lodge</a></li>
+							<li><a href="studio">Studio</a></li>
 							<li>
 								<a href="#" class="icon solid fa-angle-down lang" key="talenUitschuifKnop">Talen</a>
 								<ul>
