--- a/lodge.html
+++ b/lodge.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="nl">
 <head>
-    <a href="https://www.molenzichtkoedijk.nl/homepage" title="Lodgepagina">Lodgepagina</a>
+    <title>Lodgepagina</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
     <link rel="stylesheet" href="assets/css/main.css"/>
@@ -19,7 +19,7 @@
         <nav id="nav">
             <ul class="langs">
                 <li><a href="https://www.molenzichtkoedijk.nl" class="lang" key="homeknop">Homepagina</a></li>
-                <li><a href="https://www.molenzichtkoedijk.nl/studio">Studio</a></li>
+                <li><a href="studio">Studio</a></li>
                 <li>
                     <a href="#" class="icon solid fa-angle-down lang" key="talenUitschuifKnop">Talen</a>
                     <ul>
@@ -28,7 +28,7 @@
                         <li><a href="https://www.molenzichtkoedijk.nl/lodge" id="de" onclick="translater('de')">Duits</a></li>
                     </ul>
                 </li>
-                <li><a class="lang" key="contactknop" href="https://www.molenzichtkoedijk.nl/contact">Contact</a></li>
+                <li><a class="lang" key="contactknop" href="contact">Contact</a></li>
             </ul>
         </nav>
     </header>
