--- a/homepage.html
+++ b/homepage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="nl">
 	<head>
-		<a href="https://www.molenzichtkoedijk.nl/homepage" title="Homepagina">Homepagina</a>
+		<title>Homepagina</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,8 +17,8 @@
 					</a>
 					<nav id="nav">
 						<ul class="langs">
-							<li><a href="https://www.molenzichtkoedijk.nl/lodge">Lodge</a></li>
-							<li><a href="https://www.molenzichtkoedijk.nl/studio">Studio</a></li>
+							<li><a href="lodge">Lodge</a></li>
+							<li><a href="studio">Studio</a></li>
 							<li>
 								<a href="#" class="icon solid fa-angle-down lang" key="talenUitschuifKnop">Talen</a>
 								<ul>
@@ -27,7 +27,7 @@
 									<li><a href="https://www.molenzichtkoedijk.nl" id="de" onclick="translater('de')">Duits</a></li>
 								</ul>
 							</li>
-							<li><a class="lang" key="contactknop" href="https://www.molenzichtkoedijk.nl/contact">Contact</a></li>
+							<li><a class="lang" key="contactknop" href="contact">Contact</a></li>
 						</ul>
 					</nav>
 				</header>
