--- a/studio.html
+++ b/studio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="nl">
 <head>
-    <a href="https://www.molenzichtkoedijk.nl/homepage" title="Studiopagina">Studiopagina</a>
+    <title>Studiopagina</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
     <link rel="stylesheet" href="assets/css/main.css"/>
