--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="nl">
 	<head>
-		<title>Homepagina</title>
+		<title>Molenzicht Koedijk</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -12,7 +12,7 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<a href="https://www.molenzichtkoedijk.nl">
+					<a href="https://ww w.molenzichtkoedijk.nl">
 						<img class="imagess logo" src="imgs/Logo%20Molenzicht.png" alt="">
 					</a>
 					<nav id="nav">
