Change contact email on contact page

--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
 					<div class="box">
 						<ul class="icons">
 							<h4 class="lang" key="PhoneNumber">Telefoon: +31612882281</h4>
-							<h4 class="lang" key="EmailAddress">Email: Molenzichtkoedijk@ziggo.nl</h4>
+							<h4 class="lang" key="EmailAddress">Email: molenzichtkoedijk@kpnmail.nl</h4>
 						</ul>
 					</div>
 				</section>
