--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE HTML>
 <html lang="nl">
 	<head>
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-SWMC87EBRV"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'G-SWMC87EBRV');
+		</script>
 		<title>Molenzicht Koedijk</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
